feat: Add Services's HTML&CSS Code

--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ ul {
 }
 /* General Rules End */
 
-/* Aside */
+/* Aside Section Start */
 .aside {
   width: 270px;
   background: var(--bg-black-100);
@@ -187,7 +187,7 @@ ul {
   right: 0;
 }
 
-/* Hamburger Menu */
+/* Hamburger Menu Start */
 .aside .nav-toggler {
   height: 40px;
   width: 40px;
@@ -231,6 +231,8 @@ ul {
   left: 0;
 }
 
+/* Hamburger Menu End */
+
 .aside .nav {
   margin-top: 50px;
 }
@@ -256,8 +258,9 @@ ul {
 .aside .nav li a i {
   margin-right: 15px;
 }
+/* Aside Section End */
 
-/* Home */
+/* Home Section Start */
 .home {
   min-height: 100vh;
   display: flex;
@@ -330,8 +333,9 @@ h3.my-profession {
   border-radius: 5px;
   height: 400px;
 }
+/* Home Section Start */
 
-/* About */
+/* About Section Start */
 
 .about .about-content {
   flex: 0 0 100%;
@@ -526,3 +530,65 @@ h3.my-profession {
   text-align: justify;
   color: var(--text-black-700);
 }
+/* About Section End */
+
+/* Service Section Start */
+.service .service-item {
+  margin-bottom: 30px;
+  flex: 0 0 33.33%;
+  max-width: 33.33%;
+}
+
+.service .service-item .service-item-inner {
+  background-color: var(--bg-black-100);
+  border: 1px solid var(--bg-black-50);
+  border-radius: 10px;
+  padding: 30px 15px;
+  text-align: center;
+  transition: all 0.3s ease;
+}
+
+.service .service-item .service-item-inner:hover {
+  box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
+}
+
+.service .service-item .service-item-inner .icon {
+  height: 60px;
+  width: 60px;
+  border-radius: 50%;
+  display: block;
+  margin: 0 auto 30px;
+  text-align: center;
+  transition: all 0.3s ease;
+}
+
+.service .service-item .service-item-inner .icon .fa {
+  font-size: 40px;
+  line-height: 60px;
+  color: var(--skin-color);
+  transition: all 0.3s ease;
+}
+
+.service .service-item .service-item-inner:hover .icon {
+  background: var(--skin-color);
+}
+
+.service .service-item .service-item-inner:hover .icon .fa {
+  font-size: 25px;
+  color: #ffffff;
+}
+
+.service .service-item .service-item-inner h4 {
+  font-size: 18px;
+  margin-bottom: 15px;
+  color: var(--text-black-900);
+  font-weight: 700;
+  text-transform: capitalize;
+}
+
+.service .service-item .service-item-inner p {
+  font-size: 16px;
+  color: var(--text-black-700);
+  line-height: 25px;
+}
+/* Service Section End */
