--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ ul {
 .hidden {
   display: none !important;
 }
+
 .main-content {
   padding-left: 270px;
 }
@@ -719,3 +720,50 @@ h3.my-profession {
   padding: 0 50px;
 }
 /* Contact Section End */
+
+/*Media Query Start*/
+@media (max-width: 1299px) {
+  .aside {
+    left: -270px;
+  }
+  .main-content {
+    padding-left: 0;
+  }
+  .about .about-content .personal-info .info-item p span {
+    display: block;
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 1091px) {
+  .contact .contact-info-item,
+  .portfolio .portfolio-item,
+  .service .service-item {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+
+  .home .home-info {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+  .home .home-img {
+    display: none;
+  }
+}
+
+/*Tablet*/
+@media (max-width: 768px) {
+  .contact .contact-form .col-6,
+  .contact .contact-info-item,
+  .portfolio .portfolio-item,
+  .service .service-item,
+  .about .about-content .experience,
+  .about .about-content .education,
+  .about .about-content .skills,
+  .about .about-content .personal-info {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+}
+/*Media Query End*/
