--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,14 @@
   --text-black-700: #504e70;
 }
 
+body.dark {
+  --bg-black-900: #151515;
+  --bg-black-100: #222;
+  --bg-black-50: #393939;
+  --text-black-900: #fff;
+  --text-black-700: #e9e9e9;
+}
+
 body {
   line-height: 1.5;
   font-size: 16px;
